--- a/index.qmd
+++ b/index.qmd
@@ -23,36 +23,36 @@ editor:
 
 #### Introduction to Cox Proportional Hazards Model 
 
-The Cox Proportional Hazard model is a powerful took for survival analysis. In this section, I will review several key articles that shed light on its applications and implications. Two insightful articles provide a foundation understanding of the Cox Proportional Hazard model.The first paper by Abeysekera [@Abeysekera2009] was helpful when understanding the baseline of Cox Proportional Hazard model. It uses the model to check if the Proportional Hazards Assumptions are true. In order to test this they used the the global goodness-of-fit test proposed by Schoenfeld. The authors used an example from a clinical study involving heroin addicts who were getting methadone treatments. There were three components that were looked at which were the highest meth dose, addicts with a criminal record vs not, and how long they were treated at a clinic. What I really enjoyed about this paper and what I want to make note of is the math and coding behind the method. It explained it really well and included the code on the bottom of the paper. The second link was different but also helpful as well [@Fan2002]. The purpose of this one is to discuss variable selection techniques to the Cox Proportional Hazard model. I wanted to note this one since this can help my partner and I when it comes to approaching a data set and identifying the most important predictors. This paper doesn't go into particular depth of a hazard model like the first one. However, it shows the mathematical reasoning to choose a predictor and the outcome of the model when using their approach. 
+The Cox Proportional Hazard model is a powerful tool for survival analysis. This section embarks on a review of myriad articles, illuminating the model's foundations and multifaceted utility. Two seminal articles that lay the groundwork for comprehending the Cox Proportional Hazard model is written by authors Abeysekera and Fan. Abeysekera's insight [@Abeysekera2009] serves as a cornerstone, delving into the model's baseline and validating the assumptions using Schoenfeld's global goodness-of-fit test. In the context of a clinical investigation centered on heroin addicts receiving methadone treatments, this study analyzes three elements. These three components were the influence of the highest methadone dose, the occurrence of a criminal record among participants, and the duration of clinic treatment. The article's distinction in providing a clear and insightful exposition of both the mathematical and coding details were presented at the conclusion of the paper, allowing the reader to grasp the importance of the model. In a complementary stride, Fan's work [@Fan2002] redirects attention to variable selection techniques within the Cox Proportional Hazard model.The article offers a valuable perspective for approaching datasets and identifying pivotal predictors. It address the mathematical rationale behind predictor choice and discusses the variable selection technique. These tools are useful when working on a dataset to choose a predictor and find the outcome of the model when using this approach. 
 
 #### Application of Cox Proportional Hazards Model
 
-The application of the Cox Proportional Hazard model extends to various domains. Ben-Assuli employs it to predict excessive energy consumption in healthcare buildings, studying various influences. 0The goal of paper was to analyze and predict excessive energy consumption in healthcare buildings. The parameters that were studied was building construction, facilities, demographics and climate. The authors took these variables in order to see the what effects it has to energy over-consumption. The importance of the paper is to find ways for spending on energy as well as analyzing the key facts or consumption in healthcare buildings. The study was done on 64 healthcare buildings in Spain and used the Cox Proportional Hazards model to analyze. The model was adapted to predict energy over-consumption which I thought was interesting route to take for the study. The two variables that ended up being significant was demographic and facilities. I would like to note that this was only conducted in Spain’s region so the demographic column might not be a reliable factor. Also, this was a different approach in using Cox Proportional Hazard model. 
+The application of the Cox Proportional Hazard model extends to various domains, each shedding light on its adaptability and efficacy. 
 
-In a different context, Gonzalez-Dominguez utilizes shared frailty with the Cox proportional hazards regression to analyze post discharge survival analysis of CHF patients[@Gonzalez-Dominguez2022]. The goal of the paper is is to find the survival probability of patients with congestive heart failure and identify the factors affecting their early mortality within 90 days after hospital discharge. This paper is interesting because it uses survival analysis with Cox proportional hazards model as well as comparing it with a shared frailty correction. After further research not his I found that shared frailty correction is a technique used in survival analysis to account for unobserved or variability among subjects in a study that can effect their risk of an event.Unlike the Cox Proportional Hazards model, it assumes that the hazard ratios for different individuals are constant over time and that each observation is independent. The data set that was used for the study was from the Israeli Sheba Medical Center and used variables such as patients records with demographic, clinical, medical and lab test data for a total of 18 variables. The authors found that shared frailty correction significantly improves the Cox Proportional model especially with dependent observations. This is a model I feel like would be beneficial in our capstone to utilize since it can further improve our model. 
+In a healthcare context, Ben-Assuli's [@Ben-Assuli] study predicts excessive energy consumption in healthcare buildings. The parameters that were studied was building construction, facilities, demographics and climate. The hazard model was deployed on a dataset deriving from 64 healthcare buildings in Spain. The study discerns significant influences, notably demographic and facility-related factors. The unique application of the model to predict every over-consumption underscores its adaptability beyond traditional survival analysis. 
 
-Equeter takes a unique angle by predicting tool lifespan in machining [@Equeter2020]. It focuses on predicting the Mean Up Time of cutting tool insets based on a single cutting parameter: cutting speed. They employed the model for the predication and did so by transforming the data. Although I was confused at the use of the Cox Proportional Hazard model, the authors thought it was a good fit for assessing tool lifespan and has been used in previous machining studies. The first step the author does is generate degradation paths using a gamma process. The gamma process is employed to generate a set of tool lifetimes. Another part that I was surprised in was the author used a logarithmic transformation of cutting speed in order to improve in prediction performance. In addition, the author uses a piece wise stochastic model for flank wear in order to see the effects at the beginning to the end of the tool life. This paper is helpful when looking at appropriate data for using the Cox Proportional Hazard model. I would like to revisit it when my partner and I want to pick a data set as it sets out important notes to consider such as data transformation, logarithmic transformation and size of the data.
+In a different context, Gonzalez-Dominguez utilizes shared frailty with the Cox proportional hazards regression to analyze post discharge survival analysis of CHF patients[@Gonzalez-Dominguez2022]. The goal of the paper is to find the survival probability of patients with congestive heart failure and identify the factors affecting their early mortality within 90 days after hospital discharge. Gonzalez-Dominguez analyzed a total of 18 variables such as patients records with demographic, clinical, medical and lab test data. This study conducted using data from Israeli Sheba Medical Center introduces the concept of shared frailty correction. This is a technique in survival analysis designed to account for unobserved variability among subjects. Unlike the Cox Proportional Hazards model, it assumes that the hazard ratios for different individuals are constant over time and that each observation is independent. The authors dound that shared frailty correction markedly enhances the Cox Proportional Hazard model, particularly in handing dependent obervations.
+
+
+Equeter takes a unique angle by predicting tool's lifespan in machining [@Equeter2020]. It focuses on predicting the Mean Up Time of cutting tool insets based on a single cutting parameter, cutting speed. They employed the model for the predication and did so by transforming the data. Although this is not a typical use of the model, the authors defended their choice since it was a good fit for assessing tool lifespan and had been using in previous machining studies. The first step in their analysis was generating degradation paths using a gamma process. The gamma process is employed to generate a set of tool lifetimes. In addition, the author used a logarithmic transformation of cutting speed in order to improve in prediction performance. By utilizing a piece wise stochastic model for flank wear, the effects of the tool life was seen from beginning to the end. Employing a gamma process, implementing a logarithmic transformation of cutting speed, and incorporating a piece wise stochastic model for flank wear, the author offers an insightful perspective on the Cox Proportional Hazard model's adaptability to diverse datasets. 
 
 #### Approaches and Presuppositions
 
-Understanding the methods and assumptions behind the Cox Proportional Hazard model is essential for its effective application. Faruk delves into the model's methodology [@Faruk2018]. The researchers used data from the 2012 Indonesian Demographic and Health Survey for the first birth interval. They compared the performance of the model to the three accelerated failure time models by Weibull, exponential and log-normal distributions. The data was assessed for violations of the assumption through log cumulative hazard plots and statistical tests. In the paper, one shortfall that I feel wasn't addressed was the results of the analysis of the data. It was discussed how they employed the log cumulative hazard plots and Goodness-Of-Fit test. The analysis identified significant covariates, including women's education level, husband's education level, contraceptive knowledge, access to mass media, wealth index, and employment status.
+Understanding the methods and assumptions behind the Cox Proportional Hazard model is essential for its effective application. Faruk delves into the model's methodology [@Faruk2018]. The researchers used data from the 2012 Indonesian Demographic and Health Survey concentrating specifically on the firs tbirth interval. An examination was conducted that compared the model's efficacy with three accelerated failure time models, Weibull, exponential, and log-normal distributions. The dataset found potential assumptions violations, employing log cumulative hazard plots and various statistical tests. The papers falls short of detailing discussion on the results of the data analysis. Despite this limitation, the analysis identified significant covariates, including women's education level, husband's education level, contraceptive knowledge, access to mass media, wealth index, and employment status.
 
-Deo applies the Cox Proportional Hazard model to study post-surgical patients with stage 3 lung cancer [@Deo2021]. The authors calculated the survival estimates using the Kaplan-Meier estimates, which I discuss and reference in a different article. They used log-rank test to compare the survival rates between the two groups (males and females). They discuss the advantages and disadvantages of using log-rank test. Then they discuss the assumptions of the CPH test and how it is advantageous for clinical research. They observed that patients that are the same age, females have a 41% reduced risk of mortality and a 1 unit increase in age increases the risk of mortality by 1%.
+Deo applies the Cox Proportional Hazard model to study post-surgical patients with stage 3 lung cancer [@Deo2021]. The authors calculated the survival estimates using the Kaplan-Meier estimates.The author navigate the use of log-rank test to compare the survival rates between the two groups (males and females). The paper navigates the advantages and disadvantages of using log-rank test and even goes a step further by discussing the assumptions of the CPH test and how it is advantageous for clinical research. The final analysis observed that patients that are the same age for females have a 41% reduced risk of mortality and a 1 unit increase in age increases the risk of mortality by 1%.
 
-Fox uses Cox Proportional Hazard in a different light. The researchers used the Rossi data set in the carData package in R[@Fox2023]. The data explores recidivism rates among males in a prison. They created a Cox regression time of re-arrest. They went into detail about how to read the output of the different coefficients. Then, they showed a graph of the estimated survival prediction. There is a specific package in r called Survival, which is useful for this type of analysis.
+Fox uses Cox Proportional Hazard in a different light. The researchers used the Rossi data set in the carData package in R[@Fox2023]. The data explores recidivism rates among males in a prison. They created a Cox regression time of re-arrest. The detailed analysis of coefficients and survival predicition graphs underscores the model's revlevance in social science research. 
 
 Similarly, Bland goes into depth on what the log-rank test is [@Bland2004]. It is used to compare the survival rates between two groups. The log-rank test gives a comparison at some arbitrary point in the point, instead of comparing the whole survival time to one another. The log-rank test is also based on the same assumptions as the Kaplan test. The log-rank test is also more likely to detect a different in the groups when the risk for the outcome of interest is higher in one of the groups. 
 
-The goal of this study is to see whether hazard ration, relative risk, and other estimates made by the Cox Proportional Hazards model are biased when the basic assumptions of the model are violated[@Abeysekera2009]. This is very important because whenever regression models are run, not just Cox Proportional Hazards models, many times we take for granted that the assumptions of the model are met. This can lead to incorrect conclusions and predictions. The Cox model assumes that the hazard ratios remain constant over time. If this is violated, then the model may falsely suggest that a variable is significant or vice versa. This study showed an example where the hazards ratio is not constant over time. An example was with the age of smokers and the RR as age increased. As there was an increase in cumulative smoking exposure, the RR decrease after 50. It was also addressed how in the Cox PH model, there is increased emphasis on the Relative Risk. This is convenient because it doesn't require estimating background information. They first examined survival curves by smoking status and then compared a simulated data set could define mortality to a real data set. They found that single minded focus on PH models have hindered the development of other models in epidemiological data. Sometimes hazard functions, rather than the rate of hazard functions may be a better alternative. 
+The goal of this study is to see whether hazard ratio, relative risk, and other estimates made by the Cox Proportional Hazards model are biased when the basic assumptions of the model are violated[@Abeysekera2009]. This is significant since regression models are run, not just Cox Proportional Hazards models, many times we take for granted that the assumptions of the model are met. This can lead to incorrect conclusions and predictions. The Cox model assumes that the hazard ratios remain constant over time. If this is violated, then the model may falsely suggest that a variable is significant or vice versa. This study showed an example where the hazards ratio is not constant over time. An example was with the age of smokers and the RR as age increased. As there was an increase in cumulative smoking exposure, the RR decrease after 50. It was also addressed how in the Cox PH model, there is increased emphasis on the Relative Risk. This is convenient because it doesn't require estimating background information. They first examined survival curves by smoking status and then compared a simulated data set could define mortality to a real data set. They found that single minded focus on PH models have hindered the development of other models in epidemiological data. Sometimes hazard functions, rather than the rate of hazard functions may be a better alternative. 
 
-Lastly, Kuitunen and his team highlighted the reporting and adequacy of model details in total join arthroplasty studies[@Kuitunen2021]. It investigates, in detail, the reporting of the model details as well as the model assumptions with total joint arthroplasty studies. Nearly 80% of the Cox proportional hazards were reported inadequately. However, it is still among the most used models. One of the solutions was to hire statisticians to review the process and make sure reproducible results are created. 
-
-Another application of the model was when it was testing the strength of proportional hazards in total joint arthroplasty studies[@Ponkilainene2021]. They found a total of 1154 studies by searching for "cox" AND "hazard" in the abstract. The abstract also had to meet the following criteria: the topic must be on knee or hip joint arthroplasty, survival analysis was used, and a hazard ratio was reported. If those criteria were met, the entire article was read. Nearly 80% of the published TJA survival studies reported proportional hazard assumptions of the Cox regression model 
-inadequately. Also, more than one-fifth of the studies were found to include a probable non-proportional Cox model.
+In a related context, Kuitunen and his colleagues highlighted the reporting and adequacy of model details in total joint arthroplasty studies[@Kuitunen2021]. This comprehensive investigation reports the model details as well as the model assumptions with total joint arthroplasty studies. Nearly 80% of the Cox proportional hazards were reported inadequately. However, it is still among the most used models. One of the solutions was to hire statisticians to review the process and make sure reproducible results are created.Another application of the model was when it was testing the strength of proportional hazards [@Ponkilainene2021]. They found a total of 1154 studies by searching for "cox" AND "hazard" in the abstract. The abstract also had to meet the following criteria: the topic must be on knee or hip joint arthroplasty, survival analysis was used, and a hazard ratio was reported. If those criteria were met, the entire article was read. Nearly 80% of the published TJA survival studies reported proportional hazard assumptions of the Cox regression model inadequately. Also, more than one-fifth of the studies were found to include a probable non-proportional Cox model.
 
 The model can also be used to study the relationship between sleepiness and prediction of a driver's impairment[@Vadeby2010]. The approach was to only use the parametric part of the hazard function to study changes in risk of a critical event (lane change) due to changes in the explanatory variables (indicators). The probability of a critical event is proportional to the hazard function and therefore the changes in risk can be estimated by changes in the hazard function. All co-variates were statistically significant.
 
-In this literature review, we have explored the foundational concepts of the Cox Proportional Hazard model, its diverse applications, and the methods and assumptions underlying its use. These studies collectively showcase the model's significance in diverse fields and the need to critically assess its assumptions and reporting for reliable results. 
+In this literature review, we have explored the foundation concepts of the Cox Proportional Hazard model, its diverse applications, and the methods and assumptions underlying its use. This collective body of research accentuates the model's profound significant across diverse fields while underscoring the imperative to rigorously evaluate its assumptions and reporting for the attainment of reliable results. 
 
 ## Introduction
 
